syntax = "proto3";
package enreach.workload;

import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "enreach/x/workload/types";

// CR -> Change Request
message CheatStatusCR {
    string nodeID = 1;
    string cheatStatus = 2;
}

message CheatStatusCRDB {
  string cheatStatus = 1;
  uint64 createAt = 2;
  uint64 updateAt = 3;
}

message CheatStatusCRMapDB {
  map<string, CheatStatusCRDB> data = 1;  // manager_account => cheating status
}

message CheatStatusCRData {
  uint64 era = 1;
  string nodeID = 2; 
  map<string, CheatStatusCRDB> data = 3;
}

message EraCheatStatusProcessData {
  uint64 era = 1;
  uint64 totalNodesCount = 2;      // total nodes count need to be processed
  uint64 processedNodesCount = 3;  // accumulated processed nodes count
  uint64 startAt = 4; 
  uint64 updateAt = 5;
  string status = 6;
  cosmos.base.query.v1beta1.PageResponse pagination = 7;
}
